--- a/index.html
+++ b/index.html
@@ -289,11 +289,10 @@
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Plant Ecology</div>
-                    <p>MATTOS, J.S., MORELLATO, L.P.C., CAMARGO, M.G.G., BATALHA, M.A. 2019. Plant phylogenetic
-                      diversity of
-                      tropical
-                      mountaintop rocky grasslands: local and regional constraints. Plant Ecology. DOI:
-                      HTTPS://DOI.ORG/10.1007/S11258-019-00982-5</p>
+                    <p>MATTOS, J.S., MORELLATO, L.P.C., CAMARGO, M.G.G., BATALHA, M.A. 2019. 
+                      <a href="HTTPS://DOI.ORG/10.1007/S11258-019-00982-5">Plant phylogenetic diversity of
+                        tropical mountaintop rocky grasslands: local and regional constraints.</a>
+                       Plant Ecology. DOI: HTTPS://DOI.ORG/10.1007/S11258-019-00982-5</p>
                   </div>
                 </div>
               </div>
@@ -305,9 +304,7 @@
                   <div class="card-body">
                     <div class="h5">Botanical Journal of the Linnean Society</div>
                     <p>MATTOS, J.S., MORELLATO, L.P.C., BATALHA, M.A. 2021. Plant communities in tropical ancient
-                      mountains: how
-                      are they
-                      spatially and evolutionary structured? Botanical Journal of the Linnean Society. January 2021.</p>
+                      mountains: how are they spatially and evolutionary structured? Botanical Journal of the Linnean Society. January 2021.</p>
                   </div>
                 </div>
               </div>
@@ -318,7 +315,7 @@
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Journal of Biogeography</div>
-                    <p>The relative role of climate and biotic interactions in shaping the range limits of a neotropical orchid. 
+                    <p><a href="https://doi.org/10.1111/jbi.14629">The relative role of climate and biotic interactions in shaping the range limits of a neotropical orchid.</a>
 										Jacqueline Salvi de Mattos, Fabio Pinheiro, Bruno Garcia Luize, Cleber Juliano Neves Chaves, Thales Moreira de Lima, Clarisse Palma da Silva, Bárbara Simões Santos Leal. https://doi.org/10.1111/jbi.14629</p>
                   </div>
                 </div>
