--- a/index.html
+++ b/index.html
@@ -303,8 +303,9 @@
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Botanical Journal of the Linnean Society</div>
-                    <p>MATTOS, J.S., MORELLATO, L.P.C., BATALHA, M.A. 2021. Plant communities in tropical ancient
-                      mountains: how are they spatially and evolutionary structured? Botanical Journal of the Linnean Society. January 2021.</p>
+                    <p>MATTOS, J.S., MORELLATO, L.P.C., BATALHA, M.A. 2021. 
+                      <a href="https://doi.org/10.1093/botlinnean/boab017">Plant communities in tropical ancient mountains: how are they spatially and evolutionary structured?</a>
+                       Botanical Journal of the Linnean Society. January 2021.</p>
                   </div>
                 </div>
               </div>
