--- a/index.html
+++ b/index.html
@@ -172,12 +172,9 @@
                           but I am also interested in developing new software for the investigation of biological
                           systems.
                         </p>
-                        <p>
-                          <i class="fa-solid fa-books" aria-hidden="true"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">ResearchGate</a>
-                        </p>
+                        <p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>
                       </div>
                     </div>
-
                   </div>
                 </div>
               </div>
