--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                       <div class="card-body">
                         <p>I am mainly interested in using highly innovative tools and technologies in the study of
-                          biological diversity and evolutionary processes, focusing on the Plantae and Fungi kingdoms.
+                          biological diversity and evolutionary processes.
                           My main passion today is using bioinformatics in the study of genomic and transcriptomic data,
                           but I am also interested in developing new software for the investigation of biological
                           systems.
