--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                       </div>
                       <div class="card-body imagem-com-card" style="text-align: justify; display: inline;">
                         <p>I am mainly interested in using highly innovative tools and technologies in the study of
-                          biological diversity and evolutionary processes, focusing on the Plantae and Fungi kingdoms.
+                          biological diversity and evolutionary processes.
                           My main passion today is using bioinformatics in the study of genomic and transcriptomic data,
                           but I am also interested in developing new software for the investigation of biological
                           systems.
@@ -324,7 +324,8 @@
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Journal of Mountain Science</div>
-                    <p>Shared-role of vegetation types, elevation and soil affecting plant diversity in an old-tropical mountain hotspot.
+                    <p><a href="https://link.springer.com/article/10.1007/s11629-022-7838-z">Shared-role of vegetation types, elevation and soil affecting plant diversity in an old-tropical mountain hotspot.</a>
+			https://link.springer.com/article/10.1007/s11629-022-7838-z
                     </p>
                   </div>
                 </div>
