--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="profile-page">
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
-            <div class="page-header-image" data-parallax="true" style="background-image: url('images/20230331104838_IMG_3558.JPG'); 
+            <div class="page-header-image" data-parallax="true" style="background-image: url('images/aldrin-william-pascua-lpuAjnbG4Do-unsplash'); 
                   width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>
             <div class="container">
@@ -167,7 +167,7 @@
 
                       <div class="card-body">
                         <p>I am mainly interested in using highly innovative tools and technologies in the study of
-                          biological diversity and evolutionary processes, focusing on the Plantae and Fungi kingdoms.
+                          biological diversity and evolutionary processes.
                           My main passion today is using bioinformatics in the study of genomic and transcriptomic data,
                           but I am also interested in developing new software for the investigation of biological
                           systems.
