--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="cc-profile-image"><a href="#"><img src="images/redrocks2.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Jacqueline Mattos</div>
                 <p></p>
-                <p class="category text-white">Evolutionary Biologist | Genome Scientist</p>
+                <p class="category text-white">Genome Scientist | Evolutionary Biologist</p>
                 <p class="category text-white">PhD Candidate at University of Campinas (Brazil)</p>
                 <p class="category text-white">Researcher at University of Colorado Boulder (USA)</p>
                 <!--<a class="btn btn-primary" href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
