--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
       <div class="profile-page">
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
-            <!--<div class="page-header-image" data-parallax="true" style="background-image: url('images/20230331111704_IMG_3567'); 
-                  width: 100%; min-height: 100%; background-size: 100% 100%;">-->
-            <div class="page-header-image" data-parallax="true" style="background-image: url('images/20230331111704_IMG_3567');">
+            <div class="page-header-image" data-parallax="true" style="background-image: url('images/aldrin-william-pascua-lpuAjnbG4Do-unsplash'); 
+                  width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>
             <div class="container">
               <div class="content-center">
