--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
             <div class="page-header-image" data-parallax="true" style="background-image: url('images/aldrin-william-pascua-lpuAjnbG4Do-unsplash'); 
-                  width: 100%; min-height: 100%; background-size: 100% 100%;">
+                  width: 100%; min-height: 100%; background-size: 100% 100%;"><img src="images/images/aldrin-william-pascua-lpuAjnbG4Do-unsplash"/>
             </div>
             <div class="container">
               <div class="content-center">
