--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="/images/IMG-20230709-WA0071" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="images/IMG-20230709-WA0071" alt="Image" /></a></div>
                 <div class="h2 title">Jacqueline Mattos</div>
                 <p></p>
                 <p class="category text-white">Evolutionary & Computational Biologist</p>
@@ -109,10 +109,11 @@
                     </div>-->
 
                       <div class="card-body">
-                        <p>I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
-                          Currently, I am undertaking my PhD degree at University of Campinas (Brazil) and also collaborating at University of Colorado Boulder, at the Kane Lab.
-                          My research is focusing on the evolutionary mechanisms of natural populations of a neotropical orchid species, and for that I'm using mainly genomics and bioinformatics.
-                          As an academic, I have had training in R, Python, Linux command line, Bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
+                        <p>
+                          I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
+                          I also have a Master's degree in Environmental Sciences. Currently, I am a PhD Candidate at University of Campinas (Brazil) 
+                          and also visiting researcher at the University of Colorado Boulder, at the Kane Lab.
+                          I have had training in R, Python, Linux command line, Bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
                           version control. I have good skills in de-novo genome assembly and in many genomic/bioinformatic frameworks and tools for analyses of NGS data. In
                           addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, and Html.
 
@@ -168,7 +169,7 @@
                       <div class="card-body">
                         <p>I am mainly interested in using highly innovative tools and technologies in the study of
                           biological diversity and evolutionary processes.
-                          My main passion today is using bioinformatics in the study of genomic and transcriptomic data,
+                          My main passion today is using bioinformatics in the study of genomic data,
                           but I am also interested in developing new software for the investigation of biological
                           systems.
                         </p>
