--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="images/IMG-20230709-WA0071" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="/images/IMG-20230709-WA0071.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Jacqueline Mattos</div>
                 <p></p>
                 <p class="category text-white">Evolutionary & Computational Biologist</p>
@@ -116,6 +116,7 @@
                           I have had training in R, Python, Linux command line, Bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
                           version control. I have good skills in de-novo genome assembly and in many genomic/bioinformatic frameworks and tools for analyses of NGS data. In
                           addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, and Html.
+                          Currently, my research focuses on using bioinformatics and genomics in order to investigate evolutionary processes on natural populations of the neotropical orchid Epidendrum fulgens.
 
                         </p>
                         <p>
