--- a/index.html
+++ b/index.html
@@ -110,13 +110,20 @@
 
                       <div class="card-body">
                         <p>
-                          I have a BSc in Biological Sciences from São Paulo State University (Brazil), with a year abroad studying at the University of Liverpool (UK). 
-                          I also have a Master's degree in Environmental Sciences. Currently, I am a PhD Candidate at University of Campinas (Brazil) 
-                          and also visiting researcher at the University of Colorado Boulder, at the Kane Lab.
-                          I have had training in R, Python, Linux command line, Bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
-                          version control. I have good skills in de-novo genome assembly and in many genomic/bioinformatic frameworks and tools for analyses of NGS data. In
-                          addition, I have skills with many programming languages and web/software development tools, such as JavaScript, PHP, and Html.
-                          Currently, my research focuses on using bioinformatics and genomics in order to investigate evolutionary processes on natural populations of the neotropical orchid Epidendrum fulgens.
+                          I am currently a PhD Candidate at the University of Campinas, in Brazil, and also a Visiting Researcher at the University of Colorado Boulder, in the US. 
+                          My research is focused on using bioinformatics and genomics in order to investigate evolutionary processes on natural populations of the neotropical orchid Epidendrum fulgens.
+
+                          I am proud to say I have a BSc in Biology and a MSc in Environmental Sciences from very prestigious universities in Brazil. 
+                          I also have an undergraduate year abroad where I studied at the University of Liverpool, in the UK.
+
+                          For research purposes, I have had training in both R and Python, and I am also skilled in Linux Command Line, Bash scripting,
+                          SQL, High Performance Computing (HPC), GitHub and Git version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS
+                          data. 
+
+                          I am very passionate about nature. 
+                          Outside the lab, I love hiking and rock climbing, or doing any activity that allows me to connect with the Earth. 
+                          I love photography, dance and music. You will often find me with a guitar or a camera on my hands. 
+                          Find my photography gallery here: https://www.flickr.com/photos/134298936@N08/
 
                         </p>
                         <p>
@@ -168,11 +175,24 @@
                     </div>-->
 
                       <div class="card-body">
-                        <p>I am mainly interested in using highly innovative tools and technologies in the study of
-                          biological diversity and evolutionary processes.
-                          My main passion today is using bioinformatics in the study of genomic data,
-                          but I am also interested in developing new software for the investigation of biological
-                          systems.
+                        <p>
+                        
+                        I am mainly interested in using highly innovative tools and technologies in the study of
+                        biological diversity and evolutionary processes. My main passion today is using bioinformatics in the study of genomic data,
+                        but I am also interested in developing new software for the investigation of biological
+                        systems.
+
+                        Research areas: 
+                        - Genome assembly and NGS analyses
+                        - Transcriptome assembly and RNA-seq 
+                        - Plant conservation
+                        - Population genomics
+                        - Sustainable agriculture and crop genomics
+                        - Natural selection and other evolutionary processes
+                        - Adaptation and speciation
+                        - Conservation biology
+                        - Tropical ecology
+                        - Bioinformatics and programming
                         </p>
                         <p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>
                       </div>
