--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                           I am very passionate about nature. 
                           Outside the lab, I love hiking and rock climbing, or doing any activity that allows me to connect with the Earth. 
                           I love photography, dance and music. You will often find me with a guitar or a camera on my hands. 
-                          Find my photography gallery here: https://www.flickr.com/photos/134298936@N08/
+                          Find my photography gallery <p><a href="https://www.flickr.com/photos/134298936@N08/">here</a></p> :)
 
                         </p>
                         <p>
