--- a/index.html
+++ b/index.html
@@ -109,23 +109,23 @@
                     </div>-->
 
                       <div class="card-body">
-                        <p>
+                          <p>
                           I am currently a PhD Candidate at the University of Campinas, in Brazil, and also a Visiting Researcher at the University of Colorado Boulder, in the US. 
                           My research is focused on using bioinformatics and genomics in order to investigate evolutionary processes on natural populations of the neotropical orchid Epidendrum fulgens.
-
-                          I am proud to say I have a BSc in Biology and a MSc in Environmental Sciences from very prestigious universities in Brazil. 
+                          I have a BSc in Biology and a MSc in Environmental Sciences from very prestigious universities in Brazil. 
                           I also have an undergraduate year abroad where I studied at the University of Liverpool, in the UK.
-
+                          </p>
+                          <p>
                           For research purposes, I have had training in both R and Python, and I am also skilled in Linux Command Line, Bash scripting,
                           SQL, High Performance Computing (HPC), GitHub and Git version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS
                           data. 
-
+                          </p>
+                          <p>
                           I am very passionate about nature. 
                           Outside the lab, I love hiking and rock climbing, or doing any activity that allows me to connect with the Earth. 
                           I love photography, dance and music. You will often find me with a guitar or a camera on my hands. 
                           Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a> :)
-
-                        </p>
+                          </p>
                         <p>
                           <i class="fa fa-envelope" aria-hidden="true"></i> jsalvidemattos@gmail.com
                         </p>
@@ -176,12 +176,13 @@
 
                       <div class="card-body">
                         <p>
-                        
                         I am mainly interested in using highly innovative tools and technologies in the study of
                         biological diversity and evolutionary processes. My main passion today is using bioinformatics in the study of genomic data,
                         but I am also interested in developing new software for the investigation of biological
                         systems.
+                        </p>
 
+                        <ul>
                         Research areas: 
                         - Genome assembly and NGS analyses
                         - Transcriptome assembly and RNA-seq 
@@ -193,7 +194,8 @@
                         - Conservation biology
                         - Tropical ecology
                         - Bioinformatics and programming
-                        </p>
+                        </ul>
+
                         <p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>
                       </div>
                     </div>
