--- a/index.html
+++ b/index.html
@@ -114,8 +114,6 @@
                           My research is focused on using bioinformatics and genomics in order to investigate evolutionary processes on natural populations of the neotropical orchid Epidendrum fulgens.
                           I have a BSc in Biology and a MSc in Environmental Sciences from very prestigious universities in Brazil. 
                           I also have an undergraduate year abroad where I studied at the University of Liverpool, in the UK.
-                          </p>
-                          <p>
                           For research purposes, I have had training in both R and Python, and I am also skilled in Linux Command Line, Bash scripting,
                           SQL, High Performance Computing (HPC), GitHub and Git version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS
                           data. 
@@ -182,20 +180,21 @@
                         systems.
                         </p>
 
+                        <p>
+                        <a>Research Areas</a> 
                         <ul>
-                        Research areas: 
-                        - Genome assembly and NGS analyses
-                        - Transcriptome assembly and RNA-seq 
-                        - Plant conservation
-                        - Population genomics
-                        - Sustainable agriculture and crop genomics
-                        - Natural selection and other evolutionary processes
-                        - Adaptation and speciation
-                        - Conservation biology
-                        - Tropical ecology
-                        - Bioinformatics and programming
-                        </ul>
-
+                          - Genome assembly and NGS analyses
+                          - Transcriptome assembly and RNA-seq 
+                          - Plant conservation
+                          - Population genomics
+                          - Sustainable agriculture and crop genomics
+                          - Natural selection and other evolutionary processes
+                          - Adaptation and speciation
+                          - Conservation biology
+                          - Tropical ecology
+                          - Bioinformatics and programming
+                          </ul>
+                        </p>
                         <p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>
                       </div>
                     </div>
