--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       </div>
                     </div>-->
 
-                      <div class="card-body">
+                      <div class="card-body" style="text-align: justify;">
                           <p>
                           I am currently a PhD Candidate at the University of Campinas, in Brazil, and also a Visiting Researcher at the University of Colorado Boulder, in the US. 
                           My research is focused on using bioinformatics and genomics in order to investigate evolutionary processes on natural populations of the neotropical orchid Epidendrum fulgens.
@@ -172,7 +172,7 @@
                       </div>
                     </div>-->
 
-                      <div class="card-body">
+                      <div class="card-body" style="text-align: justify;">
                         <p>
                         I am mainly interested in using highly innovative tools and technologies in the study of
                         biological diversity and evolutionary processes. My main passion today is using bioinformatics in the study of genomic data,
@@ -183,16 +183,16 @@
                         <p>
                         <a>Research Areas</a> 
                         <ul>
-                          - Genome assembly and NGS analyses
-                          - Transcriptome assembly and RNA-seq 
-                          - Plant conservation
-                          - Population genomics
-                          - Sustainable agriculture and crop genomics
-                          - Natural selection and other evolutionary processes
-                          - Adaptation and speciation
-                          - Conservation biology
-                          - Tropical ecology
-                          - Bioinformatics and programming
+                          <li> - Genome assembly and NGS analyses </li>
+                          <li> - Transcriptome assembly and RNA-seq </li>
+                          <li> - Plant conservation </li>
+                          <li> - Population genomics </li>
+                          <li> - Sustainable agriculture and crop genomics </li>
+                          <li> - Natural selection and other evolutionary processes </li>
+                          <li> - Adaptation and speciation </li>
+                          <li> - Conservation biology </li>
+                          <li> - Tropical ecology </li>
+                          <li> - Bioinformatics and programming</li>
                           </ul>
                         </p>
                         <p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>
@@ -359,7 +359,9 @@
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Field Museum</div>
-                    <p><a href="https://fieldguides.fieldmuseum.org/guides/guide/1435">Plants from rocky outcrops of campo rupestre of the Serra do Cipó. Leonor Patrícia Cerdeira Morellato Maria Gabriela Gutierrez Camargo, Soizig Le Stradic, Jacqueline Salvi de Mattos, Beatriz Lopes Monteiro, Gustavo Shimizu, Cassiano A. Dorneles Welker, Marcelo Monge</a>
+                    <p><a href="https://fieldguides.fieldmuseum.org/guides/guide/1435">Plants from rocky outcrops of campo rupestre of the Serra do Cipó, 2023.</a> 
+                      Leonor Patrícia Cerdeira Morellato Maria Gabriela Gutierrez Camargo, Soizig Le Stradic, 
+                      Jacqueline Salvi de Mattos, Beatriz Lopes Monteiro, Gustavo Shimizu, Cassiano A. Dorneles Welker, Marcelo Monge
                     </p>
                   </div>
                 </div>
