--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <div class="container cc-education">
             <div class="h4 text-center mb-4 title">Publications</div>
 
-            <!--<div class="h5 mb-4 title">2017</div>-->
+            <div class="h5 mb-4 title">2017</div>
             <div class="card">
               <div class="row">
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -303,7 +303,7 @@
                 </div>
               </div>
             </div>
-            <!--<div class="h5 mb-4 title">2019</div>-->
+            <div class="h5 mb-4 title">2019</div>
             <div class="card">
               <div class="row">
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -317,7 +317,7 @@
                 </div>
               </div>
             </div>
-            <!--<div class="h5 mb-4 title">2021</div>-->
+            <div class="h5 mb-4 title">2021</div>
             <div class="card">
               <div class="row">
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -330,7 +330,7 @@
                 </div>
               </div>
             </div>
-						<!--<div class="h5 mb-4 title">2023</div>-->
+						<div class="h5 mb-4 title">2023</div>
             <div class="card">
               <div class="row">
                 <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
