--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@
                         <p>
                         <a>Research Areas</a> 
                         <ul>
-                          <li> - Genome assembly and NGS analyses </li>
-                          <li> - Transcriptome assembly and RNA-seq </li>
-                          <li> - Plant conservation </li>
-                          <li> - Population genomics </li>
-                          <li> - Sustainable agriculture and crop genomics </li>
-                          <li> - Natural selection and other evolutionary processes </li>
-                          <li> - Adaptation and speciation </li>
-                          <li> - Conservation biology </li>
-                          <li> - Tropical ecology </li>
-                          <li> - Bioinformatics and programming</li>
+                          <li> Genome assembly and NGS analyses </li>
+                          <li> Transcriptome assembly and RNA-seq </li>
+                          <li> Plant conservation </li>
+                          <li> Population genomics </li>
+                          <li> Sustainable agriculture and crop genomics </li>
+                          <li> Natural selection and other evolutionary processes </li>
+                          <li> Adaptation and speciation </li>
+                          <li> Conservation biology </li>
+                          <li> Tropical ecology </li>
+                          <li> Bioinformatics and programming</li>
                           </ul>
                         </p>
                         <p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>
