--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
       <div class="profile-page">
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
-            <div class="page-header-image" data-parallax="true" style="background-image: url('/images/20231229193613_IMG_3933.jpg'); 
+            <div class="page-header-image" data-parallax="true" style="background-image: url('/images/20230331101828_IMG_3529.JPG'); 
                   width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="/images/IMG-20230709-WA0071.jpg" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="/images/profile-2022.jpeg" alt="Image" /></a></div>
                 <div class="h2 title">Jacqueline Mattos</div>
                 <p></p>
                 <p class="category text-white">Evolutionary & Computational Biologist</p>
