--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="/images/20231231_121725.jpg" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="/images/IMG-20230709-WA0071--2.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Jacqueline Mattos</div>
                 <p></p>
                 <p class="category text-white">Evolutionary & Computational Biologist</p>
