--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="profile-page">
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
-            <div class="page-header-image" data-parallax="true" style="background-image: url('/images/20240102213509_IMG_4094.jpg'); 
+            <div class="page-header-image" data-parallax="true" style="background-image: url('/images/20230331101203_IMG_3522.JPG'); 
                   width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>
             <div class="container">
