--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
       <div class="profile-page">
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
-            <div class="page-header-image" data-parallax="true" style="background-image: url('/images/20230329145317_IMG_3497.JPG'); 
+            <div class="page-header-image" data-parallax="true" style="background-image: url('/images/aldrin-william-pascua-lpuAjnbG4Do-unsplash.jpg'); 
                   width: 100%; min-height: 100%; background-size: 100% 100%;">
             </div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="/images/20220318_185001---2--2.jpg" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="/images/IMG-20231229-WA0023.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Jacqueline Mattos</div>
                 <p></p>
                 <p class="category text-white">Evolutionary & Computational Biologist</p>
