--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <div class="cc-profile-image"><a href="#"><img src="/images/20230416_111236-cachoeira-saltao-edtada--2.jpg" alt="Image" /></a></div>
                 <div class="h2 title">Jacqueline Mattos</div>
                 <p></p>
-                <p class="category text-white">Evolutionary & Computational Biologist</p>
+                <p class="category text-white">Computational Biologist | Plant Genomicist</p>
                 <p class="category text-white">PhD Candidate at University of Campinas (Brazil)</p>
-                <p class="category text-white">Researcher at University of Colorado Boulder (USA)</p>
+                <p class="category text-white">Visiting Researcher at University of Colorado Boulder (USA)</p>
                 <!--<a class="btn btn-primary" href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
               </div>
             </div>
@@ -121,8 +121,7 @@
                           <p>
                           I am very passionate about nature. 
                           Outside the lab, I love hiking and rock climbing, or doing any activity that allows me to connect with the Earth. 
-                          I love photography, dance and music. You will often find me with a guitar or a camera on my hands. 
-                          Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a> :)
+                          I love photography, dance and music. Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a> :)
                           </p>
                         <p>
                           <i class="fa fa-envelope" aria-hidden="true"></i> jsalvidemattos@gmail.com
