--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>-->
 
                       <div class="card-body" style="text-align: justify;">
-                          <p>
+                          <!--<p>
                           I am currently a PhD Candidate at the University of Campinas, in Brazil, and also a Visiting Researcher at the University of Colorado Boulder, in the US. 
                           My research is focused on using bioinformatics and genomics in order to investigate evolutionary processes on natural populations of the neotropical orchid Epidendrum fulgens.
                           I have a BSc in Biology and a MSc in Environmental Sciences from very prestigious universities in Brazil. 
@@ -117,11 +117,23 @@
                           For research purposes, I have had training in both R and Python, and I am also skilled in Linux Command Line, Bash scripting,
                           SQL, High Performance Computing (HPC), GitHub and Git version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS
                           data. 
+                          </p>-->
+                          <p>
+                          I am currently a PhD Candidate in Plant Sciences at the University of Campinas (Brazil) and also a Visiting Researcher at the University of Colorado Boulder (US).
+                          My thesis research is focused on using bioinformatics and genomics in order to investigate adaptation and evolutionary processes in natural populations of the neotropical orchid Epidendrum fulgens,
+                          which occurs along an environmental gradient in the highly deforested Brazilian Atlantic Forest.
+
+                          I have a BSc in Biology, with a year studying abroad at the University of Liverpool (UK). I also have a Masters in Environmental Sciences, 
+                          having developed research within the fields of ecology & conservation.
+
+                          My main skills at the moment are with computational biology and genomics, having had training in many programming languages and computational frameworks for the analyses of genomic data.
+
+
                           </p>
                           <p>
                           I am very passionate about nature. 
                           Outside the lab, I love hiking and rock climbing, or doing any activity that allows me to connect with the Earth. 
-                          I love photography, dance and music. Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a> :)
+                          I love photography, dance and music. Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a>.
                           </p>
                         <p>
                           <i class="fa fa-envelope" aria-hidden="true"></i> jsalvidemattos@gmail.com
@@ -182,16 +194,15 @@
                         <p>
                         <a>Research Areas</a> 
                         <ul>
-                          <li> Genome assembly and NGS analyses </li>
-                          <li> Transcriptome assembly and RNA-seq </li>
-                          <li> Plant conservation </li>
-                          <li> Population genomics </li>
-                          <li> Sustainable agriculture and crop genomics </li>
-                          <li> Natural selection and other evolutionary processes </li>
-                          <li> Adaptation and speciation </li>
-                          <li> Conservation biology </li>
-                          <li> Tropical ecology </li>
-                          <li> Bioinformatics and programming</li>
+                          <li> Genome Assembly </li>
+                          <li> Transcriptomics </li>
+                          <li> Population Genomics </li>
+                          <li> Sustainable Agriculture and Crop Genomics </li>
+                          <li> Adaptation and Speciation </li>
+                          <li> Conservation Biology </li>
+                          <li> Tropical Ecology </li>
+                          <li> Biogeography </li>
+                          <li> Bioinformatics and Software Development</li>
                           </ul>
                         </p>
                         <p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>
