--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                           My thesis research is focused on using bioinformatics and genomics in order to investigate adaptation and evolutionary processes in natural populations of the neotropical orchid Epidendrum fulgens,
                           which occurs along an environmental gradient in the highly deforested Brazilian Atlantic Forest.
 
-                          I have a BSc in Biology, with a year studying abroad at the University of Liverpool (UK). I also have a Masters in Environmental Sciences, 
+                          I have a BSc in Biology, with a year studying abroad at the University of Liverpool (UK). I also have a Master's Degree in Environmental Sciences, 
                           having developed research within the fields of ecology & conservation.
 
-                          My main skills at the moment are with computational biology and genomics, having had training in many programming languages and computational frameworks for the analyses of genomic data.
+                          My main skills at the moment are in computational biology and genomics, having had training in many programming languages and computational frameworks for the analyses of genomic data.
 
 
                           </p>
