--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
                         <p>
                           <i class="fa fa-globe" aria-hidden="true"></i> Denver, Colorado/ USA
                         </p>
+                        <p>
+                          <i class="fa-brands fa-researchgate"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a>
+                        </p>
                         <!--<p>
                           <i class="fa fa-file" aria-hidden="true"></i> <a href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf">Download my CV</a>
                         </p>-->
@@ -205,7 +208,7 @@
                           <li> Bioinformatics and Software Development</li>
                           </ul>
                         </p>
-                        <p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>
+                        <!--<p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>-->
                       </div>
                     </div>
                   </div>
