--- a/index.html
+++ b/index.html
@@ -129,12 +129,16 @@
                           My main skills at the moment are in computational biology and genomics, having had training in many programming languages and computational frameworks for the analyses of genomic data.
 
 
-                          </p>
-                          <p>
+                        </p>
+                        <p>
                           I am very passionate about nature. 
                           Outside the lab, I love hiking and rock climbing, or doing any activity that allows me to connect with the Earth. 
-                          I love photography, dance and music. Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a>.
-                          </p>
+                          I love wildlife photography and playing music. 
+                          <p>Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a>.</p>
+                        </p>
+                        <p>
+
+                        </p>
                         <p>
                           <i class="fa fa-envelope" aria-hidden="true"></i> jsalvidemattos@gmail.com
                         </p>
@@ -142,7 +146,7 @@
                           <i class="fa fa-globe" aria-hidden="true"></i> Denver, Colorado/ USA
                         </p>
                         <p>
-                          <i class="fa-brands fa-researchgate"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a>
+                          <i class="fa-brands fa-researchgate" aria-hidden="true"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a>
                         </p>
                         <!--<p>
                           <i class="fa fa-file" aria-hidden="true"></i> <a href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf">Download my CV</a>
