--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                           <i class="fa fa-globe" aria-hidden="true"></i> Denver, Colorado/ USA
                         </p>
                         <p>
-                          <i class="fa-brands fa-researchgate" aria-hidden="true"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a>
+                          <i class="fa-solid fa-book-open" aria-hidden="true"></i> <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a>
                         </p>
                         <!--<p>
                           <i class="fa fa-file" aria-hidden="true"></i> <a href="documentos/CV-Jacqueline-Mattos-Dec-2022.pdf">Download my CV</a>
